# caProject

./: README.md
eText/: .gitignore  BUGFIX_REPORT.md  Cargo.toml  DELIVERY_CHECKLIST.md  EFileParser.wxs  FINAL_DELIVERY_CHECKLIST.md  FINAL_DELIVERY_PACKAGE.md  FINAL_README.md  FINAL_VERSION_README.md  FINAL_VERSION_v1.1_README.md  INSTALL_README.md  PACKAGING_README.md  PROJECT_FINAL_SUMMARY.md  PROJECT_SUMMARY.md  QT_VERSION_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_RUST.md  README_SPIC.md  README_v2.0.0.md  RUST_TEST_REPORT.md  RUST_VERSION_SUMMARY.md  SPIC_VERSION_SUMMARY.md  START_GUIDE.md  app12.py  app_optimized.py  batch_import.py  batch_test.py  batch_test_rust.bat  build.bat  build_exe.py  build_installer.py  build_qt_app_v2.bat  build_qt_app_v2.py  build_qt_app_v2_optimized.py  build_standalone.py  check_curve_configuration.py  clear_icon_cache.py  comprehensive_test.py  (+56 more)
eText/20260114/FJDZ/: FD_GD.GDZJYHHB_FDJZ_20260114_000000_report.html
eText/20260114/SYZXX/: FD_GD.GDZJYHHB_SYZXX_20260114_000000_report.html
eText/20260114/ZTXX-QXHJ/: FD_GD.GDZJYHHB_ZTXX-QXHJ_20260114_000000_report.html
eText/Backup/: Ver2.1.2  db_utils.py
eText/installer/: E文件解析工具_PySide6.iss
eText/installer/wix/: Product.wxs
eText/风功率数据/CQDYC/2026/01/01/: FD_YN.APDC_CDQYC_20260101_000000.dat.lbx  FD_YN.APDC_CDQYC_20260101_001500.dat.lbx  FD_YN.APDC_CDQYC_20260101_003000.dat.lbx  FD_YN.APDC_CDQYC_20260101_004500.dat.lbx  FD_YN.APDC_CDQYC_20260101_010000.dat.lbx  FD_YN.APDC_CDQYC_20260101_011500.dat.lbx  FD_YN.APDC_CDQYC_20260101_013000.dat.lbx  (+89 more)
(+6075 files in other folders)
