[package]
name = "efile_parser_gui"
version = "2.0.0"
edition = "2021"

[dependencies]
slint = "1.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
encoding_rs = "0.8"
native-dialog = "0.7"

[build-dependencies]
slint-build = "1.8"
